--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,5 +9,19 @@
         <h2>Written with a little guidance from Moringa School</h2>
   <p>Hello,world!</p>
   <p>Welcome to my fisrt webpage! </p> 
+  <p>Here are some things I'm going to learn about coding:</p>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And a lot more!</li>
+  </ul>
+  <h3>Here are some things I'm going to learn about coding</h3>
+  <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>And beyond!</li>
+      </ol>
 </body>
 </html>
